--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainContent"></activity>
+        <activity
+            android:name=".userProfile"
+            android:label="@string/title_activity_user_profile"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".MainContent" />
         <activity android:name=".data.ScrollingMultipleItems" />
         <activity
             android:name=".ui.login.LoginActivity"
