--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".messengerActivity"></activity>
+        <activity android:name=".messengerActivity" />
         <activity
             android:name=".mapActivity"
             android:label="@string/title_activity_map"
