--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".CreateVenueProfile"></activity>
-        <activity android:name=".CreateArtistProfile"></activity>
+        <activity android:name=".CreateVenueProfile"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".CreateArtistProfile"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
